[package]
name = "keyhelper"
version = "0.1.0"
edition = "2021"
description = "Offline PoCX key helper: mnemonic -> first bech32 address (mainnet + testnet WIF)"
publish = false

[dependencies]
bip39 = "2.1"
bip32 = "0.5"
sha2 = "0.10"
ripemd = "0.1"
bech32 = "0.11"
bs58 = { version = "0.5", features = ["check"] }
eframe = { version = "0.29", default-features = false, features = ["default_fonts", "glow"] }
egui = "0.29"
zeroize = { version = "1.8", features = ["derive"] }
arboard = "3.4"

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
panic = "abort"
